fixed scrollbars in task and client

--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -30,6 +30,7 @@
 
 .container {
   padding: 1rem;
+  scrollbar-color: #2c5282e8 #f1f1f1;
 }
 
 .content::-webkit-scrollbar {
