--- a/src/components/ConnectionsModal/style.module.scss
+++ b/src/components/ConnectionsModal/style.module.scss
@@ -49,4 +49,6 @@
   height: 100%;
   margin: 0.5rem 1rem;
   overflow: auto;
+  scrollbar-color: #2c5282e8 white;
+  scrollbar-width: thin;
 }
