--- a/src/components/ConnectionsTable/style.module.scss
+++ b/src/components/ConnectionsTable/style.module.scss
@@ -38,6 +38,7 @@
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+  scrollbar-color: #2c5282e8 #f1f1f1;
   &::-webkit-scrollbar {
     width: 8px;
   }
